gcc/testsuite/c-c++-common/cilk-plus/PS/for3.c
/* { dg-do compile } */
/* { dg-options "-O3" } */

#pragma simd		/* { dg-error "must be inside a function" } */

void foo()
{
}
